# log-interceptor

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ITERATION_1_COMPLETE.md  ITERATION_2_COMPLETE.md  ITERATION_3_COMPLETE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  Technical specifications.md  dev_plan.md  pyproject.toml
.github/workflows/: publish.yml  pypi_publish.yml  pyright.yml  python_publish.yml  ruff.yml  tests.yml
docs/: API.md
examples/: 01_basic_usage.py  02_with_filters.py  03_with_callbacks.py  04_pytest_integration.py  05_advanced_features.py  README.md  __init__.py
log_interceptor/: __init__.py  config.py  exceptions.py  filters.py  interceptor.py
tests/: __init__.py  conftest.py  mock_app.py  test_config.py  test_exceptions.py  test_filters.py  test_integration.py  test_interceptor.py  test_mock_log_writer.py  test_performance.py
